# jepa-julia-agent

./: CHANGELOG.md  README.md  STATUS.md  pyproject.toml  requirements.txt
.github/workflows/: train.yml
agent/: __init__.py  agent_loop.py  cli.py  julia_parser.py  knowledge_synthesis.py  planner.py  rejection_sampling.py  test_generator.py  trace_prediction.py  world_state.py
agent/data/: __init__.py  transition_dataset.py
agent/encoders/: __init__.py  graph_encoders.py
agent/jepa/: __init__.py  model.py  multi_view.py
checkpoints/jepa-model-1/: vocab.json
checkpoints/parquet_direct_test/: vocab.json
checkpoints/parquet_test/: vocab.json
checkpoints/test_run/: vocab.json
data/: README.md
data/transitions/: DataStructures.jl.jsonl  JSON3.jsonl  JSON3_v2.jsonl  JSON_test.jsonl  JSON_test.parquet  test_combined.parquet
data/transitions-1/: DataStructures.jl.parquet  Distributions.jl.parquet  ForwardDiff.jl.parquet  Graphs.jl.parquet  HTTP.jl.parquet  JSON3.jl.parquet  Optim.jl.parquet  Pluto.jl.parquet  Zygote.jl.parquet
docs/: action_grammar.md  design.md  roadmap.md
experiments/: analyze_embeddings.py  eval_predictions.py  evaluate_model.py  svd_analysis_results.json  train_from_mined.py  train_integrated.py  train_jepa.py
julia/: Project.toml
julia/scripts/: collect_metrics.jl  extract_state.jl  run_tests.jl
julia/src/: Actions.jl  Executor.jl  IRTools.jl  (+3 more)
scripts/: convert_to_parquet.py  mine_transitions.py  train_codespaces.sh  validate_julia.jl
tests/: test_julia_bridge.py  test_parquet.py
transformer/: __init__.py  render.py
