[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jepa-julia-agent"
version = "0.1.0"
description = "A JEPA-brained, execution-grounded coding agent for Julia"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "JEPA Julia Agent Team"}
]
keywords = ["julia", "jepa", "coding-agent", "llm", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "transformers>=4.35.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "juliacall>=0.9.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
jepa-agent = "agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "transformer*", "experiments*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
